fix modal detls spacing

--- a/src/client/styles/modal.scss
+++ b/src/client/styles/modal.scss
@@ -140,11 +140,11 @@
     color: white;
     height: 37vh;
     max-height: 37vh;
-    padding-bottom: 1em;
+    padding-bottom: 1.5em;
 
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
     /*display: flex;
     flex-direction: column;
     font-size: 1.1em;
